[package]
name = "ukhasnet-influxdb"
version = "0.2.2"
authors = ["Adam Greig <adam@adamgreig.com>"]
readme = "README.md"

[dependencies]
ukhasnet-parser = { git = "https://github.com/oddstr13/ukhasnet-parser", branch = "oddmode" }
rustc-serialize = "0.3"
reqwest = "0.4"
time = "0.1"
toml = "0.1"
fern = "0.3"
log = "0.3"
